<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutDetailFuel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/large_margin">

        <TextView
            android:id="@+id/textViewHeaderTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/average_consumption"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

        <ImageView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/main_padding">
            <TextView
                android:id="@+id/textViewUrbanTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urban"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewUrbanUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kg_meter"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/main_padding">
            <TextView
                android:id="@+id/textViewRuralTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rural"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewRuralUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kg_meter"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/main_padding">
            <TextView
                android:id="@+id/textViewMixedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mixed"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewMixedUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kg_meter"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>


</LinearLayout>